@@ -49,6 +49,7 @@ Bug Fixes::
 * prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
 * remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
 * don't crash if source block with custom subs is empty and source highlighter is enabled
+* add workaround for JRuby on Windows when value of `imagesdir` attribute is absolute and contains non-ASCII characters
 
 == 2.3.6 (2023-04-09) - @mojavelinux
 
